--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# env files (can opt-in for committing if needed)
+.env.local
+.env.development
+.env.production
+.env
+
